--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -31,7 +31,7 @@
   "sn22.95:10.4": "wenn man genau hinschaut. ",
   "sn22.95:11.1": "Was diesen Körper betrifft, ",
   "sn22.95:11.2": "hat er, der von ausgedehnter Weisheit, gelehrt, ",
-  "sn22.95:11.3": "dass man sieht, wie diese Form weggeworfen wird, ",
+  "sn22.95:11.3": "dass man diese Form weggeworfen sieht, ",
   "sn22.95:11.4": "wenn drei Dinge aufgegeben sind. ",
   "sn22.95:12.1": "Lebensenergie, Wärme und Bewusstsein: ",
   "sn22.95:12.2": "Wenn sie den Körper verlassen, ",
