--- a/translation/en/sujato/sutta/an/an1/an1.1-10_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an1/an1.1-10_translation-en-sujato.json
@@ -1,7 +1,7 @@
 {
   "an1.1:0.1": "Numbered Discourses 1.1–10 ",
   "an1.1:0.2": "1. Sights, Etc. ",
-  "an1.1:0.3": "1–10 ",
+  "an1.1:0.3": "The Chapter on What Occupies the Mind ",
   "an1.1:1.0": "1 ",
   "an1.1:1.1": "So I have heard. ",
   "an1.1:1.2": "At one time the Buddha was staying near Sāvatthī in Jeta’s Grove, Anāthapiṇḍika’s monastery. ",
