--- a/translation/en/sujato/sutta/an/an3/an3.123_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.123_translation-en-sujato.json
@@ -1,6 +1,6 @@
 {
   "an3.123:0.1": "Numbered Discourses 3.123 ",
-  "an3.123:0.2": "13. Kusināra ",
+  "an3.123:0.2": "13. Kusinārā ",
   "an3.123:0.3": "At Kusināra ",
   "an3.123:1.1": "At one time the Buddha was staying near Kusināra, in the Forest of Offerings. ",
   "an3.123:1.2": "There the Buddha addressed the mendicants, ",
