--- a/translation/en/sujato/sutta/an/an1/an1.616-627_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an1/an1.616-627_translation-en-sujato.json
@@ -1,6 +1,6 @@
 {
   "an1.616:0.1": "Numbered Discourses 1.616–627 ",
-  "an1.616:0.2": "31. The Deathless ",
+  "an1.616:0.2": "The Chapter on the Deathless ",
   "an1.616:1.0": "616 ",
   "an1.616:1.1": "“Mendicants, those who don’t enjoy mindfulness of the body don’t enjoy the deathless. ",
   "an1.616:1.2": "Those who enjoy mindfulness of the body enjoy the deathless.” ",
