--- a/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
+++ b/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
@@ -208,7 +208,7 @@
   "an-name:234.an3-kusinaravagga": "The Chapter at Kusināra ",
   "an-name:245.an3-yodhajivavagga": "The Chapter on a Warrior ",
   "an-name:259.an3-mangalavagga": "The Chapter on Good Fortune ",
-  "an-name:270.an3-patipadavagga": "The Chapter on Practice ",
+  "an-name:270.an3-patipadavagga": "The Chapter on Practices ",
   "an-name:271.an3.156-162": "Naked ",
   "an-name:272.an3-kammapathapeyyavagga": "The Chapter on Ways of Performing Deeds ",
   "an-name:273.an3.163-182": "Ways of Performing Deeds ",
