--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -611,7 +611,7 @@
   "dn16:3.27.3": "Das ist das dritte Feld der Meisterschaft. ",
   "dn16:3.28.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, unbegrenzt, sowohl schön als auch hässlich. ",
   "dn16:3.28.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
-  "dn16:3.28.3": "Das ist die vierte Dimension der Meisterschaft. ",
+  "dn16:3.28.3": "Das ist das vierte Feld der Meisterschaft. ",
   "dn16:3.29.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. ",
   "dn16:3.29.2": "Wie eine Flachsblüte, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. Oder wie Stoff aus Bāraṇasī, auf beiden Seiten satiniert, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. ",
   "dn16:3.29.3": "Ebenso sieht man, während man keine Form innerlich wahrnimmt, äußere Bilder, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. ",
