--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -621,7 +621,7 @@
   "dn16:3.30.2": "Wie eine Kaṇikārablüte, gelb, von gelber Farbe, in gelber Schattierung, gelbem Ton. Oder wie Stoff aus Bāraṇasī, auf beiden Seiten satiniert, gelb, von gelber Farbe, in gelber Schattierung, gelbem Ton. ",
   "dn16:3.30.3": "Ebenso sieht man, während man keine Form innerlich wahrnimmt, äußere Bilder, gelb, von gelber Farbe, in gelber Schattierung, gelbem Ton. ",
   "dn16:3.30.4": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
-  "dn16:3.30.5": "Das ist das sechste Feld der Meisterschaft. ",
+  "dn16:3.30.5": "Das ist die sechste Dimension der Meisterschaft. ",
   "dn16:3.31.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, rot, von roter Farbe, in roter Schattierung, rotem Ton. ",
   "dn16:3.31.2": "Wie eine scharlachrote Malvenblüte, rot, von roter Farbe, in roter Schattierung, rotem Ton. Oder wie Stoff aus Bāraṇasī, auf beiden Seiten satiniert, rot, von roter Farbe, in roter Schattierung, rotem Ton. ",
   "dn16:3.31.3": "Ebenso sieht man, während man keine Form innerlich wahrnimmt, äußere Bilder, rot, von roter Farbe, in roter Schattierung, rotem Ton. ",
