--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -639,7 +639,7 @@
   "dn14:3.23.1": "Shvativši o čemu razmišlja blaženi Vipassī, jedan veliki Brahma na to hitro kao kad bi snažan čovek ispružio savijenu ruku ili savio ispruženu ruku, nestade u Brahma svetu i pojavi se pred Budom Vipassījem.",
   "dn14:3.23.2": "Prebacivši gornji ogrtač preko jednog ramena, u znak poštovanja sklopi dlanove u njegovom pravcu i reče:",
   "dn14:3.23.3": "„Istina je, Blaženi! Istina je, Srećni!",
-  "dn14:3.23.4": "„Velika je zajednica monaha u Bandhumatīju. Kako bi bilo ako bih ih posavetovao:",
+  "dn14:3.23.4": "Velika je zajednica monaha u Bandhumatīju. Kako bi bilo ako bih ih posavetovao:",
   "dn14:3.23.5": "„Idite, monasi, na različite strane i podučavajte, na korist i sreću mnogih, iz saosećanja prema ovome svetu, na korist i sreću božanstava i ljudi.",
   "dn14:3.23.6": "Ne idite ni dvojica zajedno",
   "dn14:3.23.7": "i u skladu sa njegovim slovom i duhom, propovedajte ovo učenje divno na početku, divno  u sredini, divno na kraju.",
