--- a/translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "an8.65:3.3": "Das ist die dritte Dimension der Meisterschaft. ",
   "an8.65:4.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, unbegrenzt, sowohl schön als auch hässlich. ",
   "an8.65:4.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
-  "an8.65:4.3": "Das ist das vierte Feld der Meisterschaft. ",
+  "an8.65:4.3": "Das ist die vierte Dimension der Meisterschaft. ",
   "an8.65:5.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. ",
   "an8.65:5.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "an8.65:5.3": "Das ist das fünfte Feld der Meisterschaft. ",
