--- a/translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "an8.65:4.3": "Das ist die vierte Dimension der Meisterschaft. ",
   "an8.65:5.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. ",
   "an8.65:5.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
-  "an8.65:5.3": "Das ist das fünfte Feld der Meisterschaft. ",
+  "an8.65:5.3": "Das ist die fünfte Dimension der Meisterschaft. ",
   "an8.65:6.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, gelb, von gelber Farbe, in gelber Schattierung, gelbem Ton. ",
   "an8.65:6.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "an8.65:6.3": "Das ist das sechste Feld der Meisterschaft. ",
