--- a/translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json
@@ -27,6 +27,6 @@
   "an8.65:7.3": "Das ist die siebte Dimension der Meisterschaft. ",
   "an8.65:8.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
   "an8.65:8.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
-  "an8.65:8.3": "Das ist das achte Feld der Meisterschaft. ",
+  "an8.65:8.3": "Das ist die achte Dimension der Meisterschaft. ",
   "an8.65:8.4": "Das sind die acht Felder der Meisterschaft.“ "
 }
