--- a/translation/de/blurb/an-blurbs_translation-de.json
+++ b/translation/de/blurb/an-blurbs_translation-de.json
@@ -982,7 +982,7 @@
   "an-blurbs:an8.62": "Acht Gruppen von Eigenschaften, durch die man von Nutzen für sich oder andere ist. ",
   "an-blurbs:an8.63": "Eine Nonne bittet um Unterweisung, bevor sie sich zur Klausur zurückzieht, doch der Buddha tadelt sie, da sie nicht ernsthaft geübt hat. Sie besteht jedoch darauf, und der Buddha gibt ihr eine ausführliche Anleitung für die Meditation. ",
   "an-blurbs:an8.64": "Bei Gayā beschreibt der Buddha seine Meditation vor seinem Erwachen. Er konnte Lichter und Bilder sehen, sich mit Gottheiten unterhalten und verstehen, welche Taten sie zu Göttern gemacht hatten. ",
-  "an-blurbs:an8.65": "Acht Felder der Meisterschaft in der Meditation auf der Grundlage bestimmter Formen und Farben. ",
+  "an-blurbs:an8.65": "Acht Dimensionen der Meisterschaft in der Meditation auf der Grundlage bestimmter Formen und Farben. ",
   "an-blurbs:an8.66": "Acht Befreiungen in der Meditation, die sich auf das Sehen von Formen und das Erreichen des Formlosen gründen. ",
   "an-blurbs:an8.67": "Acht unedle Stellungnahmen, die die Wahrheit falsch darstellen. ",
   "an-blurbs:an8.68": "Acht edle Stellungnahmen, die die Wahrheit vermitteln. ",
