--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -650,5 +650,6 @@
   "dn14:3.24.1": "Onda uveče, blaženi Vipassī izađe iz osame, pa ispriča monasima o čemu je razmišljao i isto tako šta ga je zamolio onaj veliki Brahma.",
   "dn14:3.24.2": "",
   "dn14:3.26.7": "Na to većina monaha već istoga dana krete na putovanje.",
-  "dn14:3.27.1": "A u to vreme u Indiji je bilo 84.000 manastira."
+  "dn14:3.27.1": "A u to vreme u Indiji je bilo 84.000 manastira.",
+  "dn14:3.27.2": "I kada je prošla jedna godina, božanstva objaviše:"
 }
