--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -652,5 +652,6 @@
   "dn14:3.26.7": "Na to većina monaha već istoga dana krete na putovanje.",
   "dn14:3.27.1": "A u to vreme u Indiji je bilo 84.000 manastira.",
   "dn14:3.27.2": "I kada je prošla jedna godina, božanstva objaviše:",
-  "dn14:3.27.3": "„Poštovani, prošla je jedna godina!"
+  "dn14:3.27.3": "„Poštovani, prošla je jedna godina!",
+  "dn14:3.27.4": "Još je pet preostalo!"
 }
