--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "sn35.96:0.1": "Verbundene Lehrreden 35.96 ",
   "sn35.96:0.2": "10. Das Kapitel über die Sechser ",
   "sn35.96:0.3": "Wer verkümmern muss ",
-  "sn35.96:1.1": "„Mönche und Nonnen, ich will euch lehren, wer verkümmern muss, wer nicht verkümmern muss und die sechs Felder des Meisterns. ",
+  "sn35.96:1.1": "„Mönche und Nonnen, ich will euch lehren, wer verkümmern muss, wer nicht verkümmern muss und die sechs Felder der Meisterschaft. ",
   "sn35.96:1.2": "Hört zu … ",
   "sn35.96:1.3": "Und wie muss jemand verkümmern? ",
   "sn35.96:1.4": "Wenn ein Mönch mit dem Auge ein Bild sieht, kommen schlechte, untaugliche Eigenschaften auf: Erinnerungen und Gedanken, die einen leicht fesseln. ",
