--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -658,5 +658,6 @@
   "dn14:3.27.6": "Kada su prošle dve godine…",
   "dn14:3.27.7": "tri…",
   "dn14:3.27.8": "četiri…",
-  "dn14:3.27.9": "I kada je prošlo pet godina, božanstva objaviše:"
+  "dn14:3.27.9": "I kada je prošlo pet godina, božanstva objaviše:",
+  "dn14:3.27.10": "„Poštovani, prošlo je pet godina!"
 }
