--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -659,5 +659,6 @@
   "dn14:3.27.7": "tri…",
   "dn14:3.27.8": "četiri…",
   "dn14:3.27.9": "I kada je prošlo pet godina, božanstva objaviše:",
-  "dn14:3.27.10": "„Poštovani, prošlo je pet godina!"
+  "dn14:3.27.10": "„Poštovani, prošlo je pet godina!",
+  "dn14:3.27.11": "Još je jedna preostala!"
 }
