--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -660,5 +660,6 @@
   "dn14:3.27.8": "četiri…",
   "dn14:3.27.9": "I kada je prošlo pet godina, božanstva objaviše:",
   "dn14:3.27.10": "„Poštovani, prošlo je pet godina!",
-  "dn14:3.27.11": "Još je jedna preostala!"
+  "dn14:3.27.11": "Još je jedna preostala!",
+  "dn14:3.27.12": "Kada prođe i ta jedna, treba da se vratite u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”"
 }
