--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -673,5 +673,6 @@
   "dn14:3.28.5": "niti asketa ko ih zlostavlja.",
   "dn14:3.28.6": "Od svega rđavog se okreni,",
   "dn14:3.28.7": "svako dobro u sebi neguj;",
-  "dn14:3.28.8": "srce i um svoj pročisti,"
+  "dn14:3.28.8": "srce i um svoj pročisti,",
+  "dn14:3.28.9": "to je učenje svih Budnih."
 }
