--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn35.96:4.6": "So muss jemand nicht verkümmern. ",
   "sn35.96:5.1": "Und was sind die sechs Felder der Meisterschaft? ",
   "sn35.96:5.2": "Wenn ein Mönch mit dem Auge ein Bild sieht, kommen keine schlechten, untauglichen Eigenschaften auf: keine Erinnerungen oder Gedanken, die einen leicht fesseln. ",
-  "sn35.96:5.3": "Dann sollte er verstehen: "
+  "sn35.96:5.3": "Dann sollte er verstehen: ",
+  "sn35.96:5.4": "‚Dieses Sinnesfeld wurde gemeistert. "
 }
