--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -676,5 +676,6 @@
   "dn14:3.28.8": "srce i um svoj pročisti,",
   "dn14:3.28.9": "to je učenje svih Budnih.",
   "dn14:3.28.10": "Druge ne vređaj, niti povređuj,",
-  "dn14:3.28.11": "u zavetu obuzdan budi,"
+  "dn14:3.28.11": "u zavetu obuzdan budi,",
+  "dn14:3.28.12": "u hrani umeren,"
 }
