--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn35.96:5.2": "Wenn ein Mönch mit dem Auge ein Bild sieht, kommen keine schlechten, untauglichen Eigenschaften auf: keine Erinnerungen oder Gedanken, die einen leicht fesseln. ",
   "sn35.96:5.3": "Dann sollte er verstehen: ",
   "sn35.96:5.4": "‚Dieses Sinnesfeld wurde gemeistert. ",
-  "sn35.96:5.5": "Denn das ist es, was der Buddha ein Feld der Meisterschaft nennt.‘ … "
+  "sn35.96:5.5": "Denn das ist es, was der Buddha ein Feld der Meisterschaft nennt.‘ … ",
+  "sn35.96:5.6": "Wenn ferner eine Nonne mit dem Geist einen Gedanken erkennt, kommen keine schlechten, untauglichen Eigenschaften auf: keine Erinnerungen und Gedanken, die einen leicht fesseln. "
 }
