--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -679,5 +679,6 @@
   "dn14:3.28.11": "u zavetu obuzdan budi,",
   "dn14:3.28.12": "u hrani uvek umeren,",
   "dn14:3.28.13": "u osami boravi,",
-  "dn14:3.28.14": "usavršavanju uma posvećen –"
+  "dn14:3.28.14": "usavršavanju uma posvećen –",
+  "dn14:3.28.15": "to je učenje svih Budnih."
 }
