--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -681,5 +681,5 @@
   "dn14:3.28.13": "u osami boravi,",
   "dn14:3.28.14": "usavršavanju uma posvećen –",
   "dn14:3.28.15": "to je učenje svih Budnih.",
-  "dn14:3.29.0": "17. Poruka božanstava"
+  "dn14:3.29.0": "17. Radovanje božanstava"
 }
