--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -685,5 +685,6 @@
   "dn14:3.29.1": "Monasi, jednom sam boravio kraj Ukaṭṭhe,9 u Subhaga šumi, u podnožju jednog veličanstvenog salovog drveta.",
   "dn14:3.29.2": "I dok sam tako boravio na pustom mestu, u osami, pade mi na um ovakva misao:",
   "dn14:3.29.3": "„Nije lako pronaći mesto na kojem nisam nekada ranije živeo, sem među božanstvima čistih boravišta.",
-  "dn14:3.29.4": "Kako bi bilo da ih posetim?”"
+  "dn14:3.29.4": "Kako bi bilo da ih posetim?”",
+  "dn14:3.29.5": "Na to, hitro kao kad bi snažan čovek ispružio savijenu ruku ili savio ispruženu ruku, nestadoh u Subhaga šumi i pojavih se pred Avihā božanstvima."
 }
