--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -687,5 +687,6 @@
   "dn14:3.29.3": "„Nije lako pronaći mesto na kojem nisam nekada ranije živeo, sem među božanstvima čistih boravišta.",
   "dn14:3.29.4": "Kako bi bilo da ih posetim?”",
   "dn14:3.29.5": "Na to, hitro kao kad bi snažan čovek ispružio savijenu ruku ili savio ispruženu ruku, nestadoh u Subhaga šumi i pojavih se pred Avihā božanstvima.",
-  "dn14:3.29.6": "A među njima, na hiljade božanstava, stotine hiljada njih dođoše do mene, pozdraviše me, pa stadoše sa strane. Stojeći tako, ovako rekoše:"
+  "dn14:3.29.6": "A među njima, na hiljade božanstava, stotine hiljada njih dođoše do mene, pozdraviše me, pa stadoše sa strane. Stojeći tako, ovako rekoše:",
+  "dn14:3.29.7": "„Gospodine, pre 91 eona se Buda Vipassī, plemeniti i potpuno probuđeni, pojavio u ovome svetu."
 }
