--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -697,5 +697,6 @@
   "dn14:3.29.13": "Buda Vipassī je imao i tri zajednice svojih učenika. Jedna od 6.800.000, jedna od 100.000 i jedna od 80.000. I svaki od njih uklonio je sve nečistoće svoga uma.",
   "dn14:3.29.15": "Otac blaženog Vipassīja bio je kralj Bandhuma,",
   "dn14:3.29.16": "a majka kraljica Bandhumatī.",
-  "dn14:3.29.17": "I on je vladao iz svoje prestonici po imenu Bandhumatī."
+  "dn14:3.29.17": "I on je vladao iz svoje prestonici po imenu Bandhumatī.",
+  "dn14:3.29.18": "Blaženi Vipassī, plemeniti i potpuno probuđeni, ovako je napustio svoj dom, ovako postao beskućnik, ovakav veliki napor uložio i ovako pokrenuo točak učenja."
 }
