--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -698,5 +698,6 @@
   "dn14:3.29.15": "Otac blaženog Vipassīja bio je kralj Bandhuma,",
   "dn14:3.29.16": "a majka kraljica Bandhumatī.",
   "dn14:3.29.17": "I on je vladao iz svoje prestonici po imenu Bandhumatī.",
-  "dn14:3.29.18": "Blaženi Vipassī, plemeniti i potpuno probuđeni, ovako je napustio svoj dom, ovako postao beskućnik, ovakav veliki napor uložio i ovako pokrenuo točak učenja."
+  "dn14:3.29.18": "Blaženi Vipassī, plemeniti i potpuno probuđeni, ovako je napustio svoj dom, ovako postao beskućnik, ovakav veliki napor uložio i ovako pokrenuo točak učenja.",
+  "dn14:3.29.19": "Vodeći svetački život predvođeni blaženim Vipassījem, mi izgubismo želju za zadovoljstvima čula i preporodismo se na ovom mestu.”"
 }
