--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -704,5 +704,6 @@
   "dn14:3.32.1": "Na kraju, na hiljade božanstava, stotine hiljada njih dođoše do mene, pozdraviše me, pa stadoše sa strane. Stojeći tako, ovako rekoše:",
   "dn14:3.32.2": "„U ovome srećnom eonu, gospodo, Blaženi, plemeniti i potpuno probuđeni, se pojavio u ovome svetu.",
   "dn14:3.32.3": "Rođen je u porodici plemića,",
-  "dn14:3.32.4": "u Gotama klanu."
+  "dn14:3.32.4": "u Gotama klanu.",
+  "dn14:3.32.5": "Njegov životni vek je kratak, poput trenutka, jer dugovečna osoba sada poživi tek sto godina."
 }
