--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn35.98:2.4": "‚Meine tauglichen Eigenschaften verkümmern nicht. ",
   "sn35.98:2.5": "Denn das ist es, was der Buddha keinen Niedergang nennt.‘ ",
   "sn35.98:2.6": "Es gibt Töne … Düfte … Geschmäcke … Berührungen … ",
-  "sn35.98:2.7": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
+  "sn35.98:2.7": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
+  "sn35.98:2.8": "Wenn eine Nonne diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, sollte sie verstehen: "
 }
