--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.98_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn35.98:2.5": "Denn das ist es, was der Buddha keinen Niedergang nennt.‘ ",
   "sn35.98:2.6": "Es gibt Töne … Düfte … Geschmäcke … Berührungen … ",
   "sn35.98:2.7": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "sn35.98:2.8": "Wenn eine Nonne diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, sollte sie verstehen: "
+  "sn35.98:2.8": "Wenn eine Nonne diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, sollte sie verstehen: ",
+  "sn35.98:2.9": "‚Meine tauglichen Eigenschaften verkümmern nicht. "
 }
