--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn35.99:0.2": "10. Das Kapitel über die Sechser ",
   "sn35.99:0.3": "Versenkung ",
   "sn35.99:1.1": "„Mönche und Nonnen, entwickelt Versenkung. ",
-  "sn35.99:1.2": "Ein Mönch, der Versenkung besitzt, versteht wahrhaftig. "
+  "sn35.99:1.2": "Ein Mönch, der Versenkung besitzt, versteht wahrhaftig. ",
+  "sn35.99:1.3": "Was versteht er wahrhaftig? "
 }
