--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn35.99:0.3": "Versenkung ",
   "sn35.99:1.1": "„Mönche und Nonnen, entwickelt Versenkung. ",
   "sn35.99:1.2": "Ein Mönch, der Versenkung besitzt, versteht wahrhaftig. ",
-  "sn35.99:1.3": "Was versteht er wahrhaftig? "
+  "sn35.99:1.3": "Was versteht er wahrhaftig? ",
+  "sn35.99:1.4": "Er versteht wahrhaftig, dass das Auge unbeständig ist. "
 }
