--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.99:1.2": "Ein Mönch, der Versenkung besitzt, versteht wahrhaftig. ",
   "sn35.99:1.3": "Was versteht er wahrhaftig? ",
   "sn35.99:1.4": "Er versteht wahrhaftig, dass das Auge unbeständig ist. ",
-  "sn35.99:1.5": "Er versteht wahrhaftig, dass Bilder unbeständig sind. "
+  "sn35.99:1.5": "Er versteht wahrhaftig, dass Bilder unbeständig sind. ",
+  "sn35.99:1.6": "Er versteht wahrhaftig, dass Augenbewusstsein unbeständig ist. "
 }
