--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn35.99:1.7": "Er versteht wahrhaftig, dass Augenberührung unbeständig ist. ",
   "sn35.99:1.8": "Er versteht wahrhaftig, dass das angenehme, schmerzhafte oder neutrale Gefühl, das durch Augenberührung bedingt entsteht, unbeständig ist. … ",
   "sn35.99:1.9": "Er versteht wahrhaftig, dass der Geist unbeständig ist. ",
-  "sn35.99:1.10": "Er versteht wahrhaftig, dass Gedanken unbeständig sind. "
+  "sn35.99:1.10": "Er versteht wahrhaftig, dass Gedanken unbeständig sind. ",
+  "sn35.99:1.11": "Er versteht wahrhaftig, dass Geistbewusstsein unbeständig ist. "
 }
